<resources>
    <string name="app_name">Birthday Info</string>
    <string name="app_name2">B. Info</string>
    <string name="data">Data di nascita</string>
    <string name="dob">Data di Nascita</string>
    <string name="today">Oggi</string>
    <string name="calc">Calcola l\'età</string>
    <string name="data_n">Data di nascita</string>
    <string name="hour">Ora</string>
    <string name="cal">Data di oggi</string>
    <string name="calcul">Calcola</string>
    <string name="welcome">Benvenuto su</string>
    <string name="welcome2">Benvenuta su</string>
    <string name="age">La tua età</string>
    <string name="age2">Statistiche della tua età</string>
    <string name="month">Mesi Totali</string>
    <string name="sett">Settimane Totali</string>
    <string name="gg">Giorni Totali</string>
    <string name="ore">Ore Totali</string>
    <string name="min">Minuti</string>
    <string name="sec">Secondi</string>
    <string name="news">Altre notizie/eventi sulla tua data di nascita</string>
    <string name="accadde">Avvenimenti storici\nnel tuo anno di\n nascita</string>
    <string name="oroscopo">Visualizza l\'oroscopo</string>
    <string name="close">Chiudi la pagina</string>
    <string name="Registrati">Registrati</string>
    <string name="binfo">BIRTHDAY INFO</string>
    <string name="info">Curiosa o curioso di avere delle info sul tuo compleanno?Bene sei nel
        posto giusto....</string>
    <string name="info2">...Per prima cosa segna il tuo nome e cognome, poi indica se sei uomo o donna e sopprattutto divertiti con
        Birthday Info.</string>
    <string name="info3">Potrai in seguito avere notizie sulla tua età e curiosità sul tuo anno di nascita e anche conoscere il tuo personale oroscopo!!!</string>
    <string name="man_woman">Sei Donna o Uomo?</string>
    <string name="details">Clicca qui se vuoi saperne di più</string>
    <string name="netx_">Il tuo prossimo compleanno è tra</string>
    <string name="c_zod">Zodiaco cinese</string>
    <string name="mayan">Zodiaco Maya</string>
    <string name="day">Giorno di nascita</string>
    <string name="h_zod">Segno zodiacale</string>
    <string name="chinese">Zodiaco Cinese</string>
    <string name="prossimi">Prossimi Compleanni</string>
    <string name="about">Info</string>
    <string name="other">Altre Apps</string>
    <string name="celtic">Oroscopo celtico</string>
    <string name="c_m">Zodiaco Maya</string>
    <string name="c_c">Oroscopo Celtico</string>
    <string name="netx_b">Prossimi compleanni</string>
    <string name="indietro">Indietro</string>
    <string name="earth">Età della Terra quando sei nato</string>
    <string name="celtic_month">Mese del calendario Celtico</string>
    <string name="credits">Image by\nhttp://www.dossier.net/relax/zodiaco_cinese/\nit.freepik.com
    \nwww.wijkipedia.it\nDamon Hellanbrand\n\nHappy Birthday animation by Copyright 2015 The Android Open Source Project, Inc.</string>
    <string name="sign">Il tuo segno</string>
    <string name="next_text">IL PROSSIMO</string>
    <string name="version">Version 1.3</string>
    <string name="name">Inserire il nome</string>
    <string name="cognome">Inserire il cognome</string>
    <string name="year">anni</string>
    <string name="months">mesi</string>
    <string name="dayss">giorni</string>
    <string name="mouse">Topo</string>
    <string name="tigre">Tigre</string>
    <string name="drago">Drago</string>
    <string name="cavallo">Cavallo</string>
    <string name="cane">Cane</string>
    <string name="bufalo">Bufalo</string>
    <string name="lepre">Lepre</string>
    <string name="serpente">Serpente</string>
    <string name="scimmia">Scimmia</string>
    <string name="gallo">Gallo</string>
    <string name="capra">Capra</string>
    <string name="gnu">Gnu</string>
    <string name="cinghiale">Cinghiale</string>
    <string name="ariete">Ariete</string>
    <string name="toro">Toro</string>
    <string name="gemelli">Gemelli</string>
    <string name="cancro">Cancro</string>
    <string name="leone">Leone</string>
    <string name="vergine">Vergine</string>
    <string name="bilancia">Bilancia</string>
    <string name="scorpione">Scorpione</string>
    <string name="saggittario">Saggittario</string>
    <string name="capricorno">Capricorno</string>
    <string name="acquario">Acquario</string>
    <string name="pesci">Pesci</string>
    <string name="lucertola">Kibray</string>
    <string name="scimmia_m">Ratz</string>
    <string name="falcone">Coz</string>
    <string name="giaguaro">Balam</string>
    <string name="cane_m">Pek</string>
    <string name="serpente_m">Kan</string>
    <string name="lepre_m">Tzaub</string>
    <string name="tartaruga">Aak</string>
    <string name="pipi">Tzootz</string>
    <string name="scorpione_m">Dzec</string>
    <string name="cervo">Keh</string>
    <string name="civetta">Moan</string>
    <string name="pavone">Kutz</string>
    <string name="abete">Abete</string>
    <string name="acero">Acero</string>
    <string name="betulla">Betulla</string>
    <string name="carpino">Carpino</string>
    <string name="castagno">Castagno</string>
    <string name="cedro">Cedro</string>
    <string name="cipresso">Cipresso</string>
    <string name="corniolo">Corniolo</string>
    <string name="faggio">Faggio</string>
    <string name="fico">Fico</string>
    <string name="frassino">Frassino</string>
    <string name="melo">Melo</string>
    <string name="nocciolo">Nocciolo</string>
    <string name="noce">Noce</string>
    <string name="olmo">Olmo</string>
    <string name="pino">Pino</string>
    <string name="pioppo">Pioppo</string>
    <string name="quercia">Quercia</string>
    <string name="salice">Salice</string>
    <string name="tiglio">Tiglio</string>
    <string name="ulivo">Ulivo</string>
    <string name="gen">Gennaio</string>
    <string name="feb">Febbraio</string>
    <string name="mar">Marzo</string>
    <string name="apr">Aprile</string>
    <string name="mag">Maggio</string>
    <string name="giu">Giugno</string>
    <string name="lug">Luglio</string>
    <string name="ago">Agosto</string>
    <string name="set">Settembre</string>
    <string name="ott">Ottobre</string>
    <string name="nov">Novembre</string>
    <string name="dic">Dicembre</string>
    <string name="horror">Horror</string>
    <string name="zodi">Zodiaco</string>
    <string name="all">Entrambi</string>
    <string name="settings">Impostazioni</string>
    <string name="material">Material</string>
    <string name="normal">Normale</string>
    <string name="scuro">Scuro</string>
    <string name="view">View Birthday</string>
    <string name="hello">Ciao</string>
    <string name="ops">Oops...</string>
    <string name="error_data">La data di nascita deve essere inferiore o uguale a quella odierna!</string>
    <string name="melo2">Melo</string>
    <string name="mouse_s">I nati del Topo sono provvisti di grande carisma, che favorisce e facilita i loro legami di amicizia sincera e profonda. Anche nella vita di coppia questa qualità dà loro la possibilità di unirsi ad un compagno degno di loro, e ugualmente desideroso di godere di quelle stesse gioie e soddisfazioni che il Topo ama e a cui raramente rinuncia. Il Topo è dotato di enorme pazienza e lucidità, anche nell\'affrontare le prove più dure; spesso questa qualità lo porta ad ottenere rapidamente il successo, e i relativi avanzamenti di carriera, nel suo ambito professionale. La voglia di allargare i propri orizzonti, fisici e mentali, lo spinge ad amare i viaggi e a voler sperimentare le novità; in questo modo si mostra dapprima piuttosto anticonformista e poi, con il passare degli anni, più responsabile. A volte il Topo pecca di superbia: ciò da cui più deve guardarsi è l\'arroganza, il credersi superiore agli altri senza dar loro la possibilità di esprimersi.</string>
    <string name="cow_s">I nati del Bufalo sono caratterizzati da un\'esemplare pazienza, che nel loro caso raramente viene messa a dura prova: hanno un altissimo livello di opportazione. Quando però il limite viene oltrepassato, possono perdere completamente il controllo. Nel loro lavoro sono particolarmente meticolosi e pignoli; guai a chiedere loro di distogliere l\'attenzione da ciò a cui si stanno dedicando, per qualunque motivo. Sono in grado di raggiungere importanti risultati grazie ad una seria e precisa capacità di analisi delle situazioni; questo permette loro anche di rivestire ruoli predominanti all\'interno di importanti ambiti lavorativi. L\'errore in cui possono incorrere è quello della monotonia, ovvero di non mostrarsi mai imprevedibili o minimamente concilianti nei confronti di ciò che è anticonvenzionale.</string>
    <string name="tigre_s">I nati della Tigre sono provvisti di grande carisma, che li aiuta ad ottenere e rivestire con facilità posizioni di potere; grazie a questa spiccata qualità, sono inoltre agevolati nelle relazioni umane.E\' questa la ragione per cui, spesso, si dedicano con successo alla politica, incorrendo però, a volte, nel rischio di sovrastimare se stessi e le proprie potenzialità. Godono solitamente di una notevole fortuna al gioco. L\'errore in cui possono incorrere i nati della Tigre è quello di risultare talvolta poco simpatici; questo a causa dell\'eccessiva determinazione, che li spinge a non arrendersi mai nel corso di una sfida. Possono inoltre soffrire di umore altalenante.</string>
    <string name="cavallo_s">I nati del Cavallo hanno una fervente vita sociale, che spesso animano essi stessi grazie alle loro doti di trascinatori del gruppo. Abili nella conversazione e generosi di complimenti nei confronti degli altri, regalano agli amici serate liete e spensierate. Sono inoltre provvisti di grande intuito e comprensione per quanto concerne le idee degli altri. Il loro lato più fragile si identifica con l\'incertezza, la perdita delle proprie sicurezze, che a volte manifestano senza preavviso. L\'errore in cui possono incorrere è quello di risultare troppo loquaci, con il rischio di arrecare fastidio a chi è loro vicino.</string>
    <string name="gnu_s">I nati della Capra sono provvisti di estro e inventiva, che possono però restare improduttivi in mancanza dell\'intervento di qualcuno che sappia consigliare la direzione da prendere. Questo aiuto è loro indispensabile anche per raggiungere, nell\' ambito lavorativo, gratifiche interiori, e persino pecuniarie. La loro creatività non è una qualità solitaria, ma è affiancata da un forte altruismo: dare senza chiedere nulla in cambio è ciò che i nati della Capra amano fare. Nella vita di coppia, sono soliti fondare la relazione su salde basi di onestà e lealtà; in questo modo vivono rapporti lunghi nel tempo, senza sentire il bisogno di alcuna evasione. L\'errore in cui possono incorrere i nati della Capra è quello di perdere la speranza di raggiungere i risultati prefissi già alle prime difficoltà.</string>
    <string name="h_arab">Oroscopo Arabo</string>
    <string name="i_zod">Zodiaco Indu</string>
    <string name="horror_t">Oroscopo normale o horror?</string>
    <string name="love">Sblocco modalità love?</string>
    <string name="love_t">Love o no?</string>
    <string name="scelta_h">Quale oroscopo vedere?</string>
</resources>